ballCollision with Player

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
     </div>
     <script src="classes/opponent.js"></script>
-    <script src="classes/player.js"></script>
-    <script src="classes/ball.js"></script>
+    <!-- <script src="classes/player.js"></script> -->
+    <script src="classes/allPlayers.js"></script>
     <script src="classes/background.js"></script> 
     <script src="classes/game.js"></script>
     <script src="index.js"></script>
