opponent bounderies working

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </footer>
 
     </div>
-    <script src="classes/opponent.js"></script>
+    <!-- <script src="classes/opponent.js"></script> -->
     <!-- <script src="classes/player.js"></script> -->
     <script src="classes/allPlayers.js"></script>
     <script src="classes/background.js"></script> 
