goal counter working

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </div>
     <footer class="game-footer">
-        <span id="scoreBoard">Opponent Score:  </span>
+        <span id="scoreBoard">Player Score:  </span>
         <span id="goals">0</span>
     </footer>
 
