winner/looser text added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <div class="canvas-and-button">
         <canvas id="my-canvas" width="600" height="900"></canvas>
         <div id="game-side">
+            <div class="game-over">
+                <div class="looser-text"id="looser">Game Over! You lost the game </div>
+                <div class="winner-text" id="winner">Game Over! Congrats, you won!</div>
+            </div>
             <button id="start-game" >Start Game</button>
             <button id="go-back" class="active">Go Back</button>
             <button id="restart" ">Play again</button>
