--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
                 <div class="winner-text" id="winner">Game Over! Congrats, you won!</div>
             </div>
             <button id="start-game" >Start Game</button>
-            <button id="go-back" class="active">Go Back</button>
-            <button id="restart" ">Play again</button>
+            <button id="go-back" >Go Back</button>
+            <button id="restart" class="inactive" >Play Again</button>
+            <div>
+                <button class="speed" id="player"  >+ Player speed</button>
+                <button class="speed" id="ball"  >+ Ball Speed</button>
+            </div>
         </div>
     </div>
     <footer class="game-footer">
