--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </p>
                 <h3>You can win but you can also lose</h3>
                 <ul>
-                    <li>You win when you score 3</li>
-                    <li>You loose when the opponent scores 3 or the clock timer reaches 0</li>
+                    <li>You win when you score </li>
+                    <li>You loose when the opponent scores  or countdown is finished</li>
                 </ul>
             </div>
             
@@ -64,9 +64,10 @@
             <button id="go-back" >Go Back</button>
             <button id="restart" class="inactive" >Play Again</button>
             <div>
-                <button class="speed" id="player"  >+ Player speed</button>
-                <button class="speed" id="ball"  >+ Ball Speed</button>
+                <button class="speed " id="player"  >+ Player speed</button>
+                <button class="speed " id="ball"  >+ Ball Speed</button>
             </div>
+            <!-- <button id="difficult-game">Difficult Game </button> -->
         </div>
     </div>
     <footer class="game-footer">
