--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
     <div id="game-screen" class="container" >
 
     <header class="game-header">
-        <span id="scoreBoardOpponent">Opponent Score:  </span>
+        <div class="timer">
+       <span> Timer:</span> <span id="count-down">60</span> 
+        </div>
+        <div>
+        <span id="scoreBoardOpponent">OP Score:  </span>
         <span id="goalsOpponent">0</span>
+        </div>
     </header>
     <div class="canvas-and-button">
         <canvas id="my-canvas" width="600" height="900"></canvas>
@@ -71,8 +76,10 @@
         </div>
     </div>
     <footer class="game-footer">
-        <span id="scoreBoard">Player Score:  </span>
-        <span id="goals">0</span>
+        <div class="score-board">
+         <span id="scoreBoard">Player Score:  </span>
+         <span id="goals">0</span>
+        </div>
     </footer>
 
     </div>
