Timer function implemented

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <h3>The game</h3>
                 <p>
-                    Your goal is to hit the ball everytime it´s near you and avoiding it to enter the goal and aiming towards the opponent goal. You will be playing against the console!
+                    Your goal is to hit the ball everytime it´s near you, avoiding it to enter own goal and aiming towards the opponent goal. You will be playing against the console!
                 </p>
                 <h3>You can win but you can also lose</h3>
                 <ul>
