--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
     <header class="game-header">
         <div class="timer">
-       <span> Timer:</span> <span id="count-down">60</span> 
+            <span> Timer:</span> <span id="count-down">60</span> 
         </div>
         <div>
-        <span id="scoreBoardOpponent">OP Score:  </span>
-        <span id="goalsOpponent">0</span>
+             <span id="scoreBoardOpponent">OP Score:  </span>
+             <span id="goalsOpponent">0</span>
         </div>
     </header>
     <div class="canvas-and-button">
@@ -70,7 +70,7 @@
             <button id="restart" class="inactive" >Play Again</button>
             <div>
                 <button class="speed " id="player"  >+ Player speed</button>
-                <button class="speed " id="ball"  >+ Ball Speed</button>
+                <button class="speed " id="ball"  > Ball Speed</button>
             </div>
             <!-- <button id="difficult-game">Difficult Game </button> -->
         </div>
@@ -83,8 +83,6 @@
     </footer>
 
     </div>
-    <!-- <script src="classes/opponent.js"></script> -->
-    <!-- <script src="classes/player.js"></script> -->
     <script src="classes/allPlayers.js"></script>
     <script src="classes/background.js"></script> 
     <script src="classes/game.js"></script>
